--- a/src/app/pages/carta/carta.component.html
+++ b/src/app/pages/carta/carta.component.html
@@ -562,13 +562,31 @@
 
     <!-- Botones -->
     <div class="flex flex-col space-y-3 mt-4">
-      <button (click)="confirmarYImprimir()"
-        class="w-full px-4 py-2 flex items-center justify-center gap-2 bg-green-600 text-white font-semibold rounded-lg shadow hover:bg-green-700">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-        </svg>
-        Confirmar
-      </button>
+     <button 
+  (click)="confirmarYImprimir()"
+  [disabled]="procesandoPedido"
+  class="w-full px-4 py-2 flex items-center justify-center gap-2 
+         bg-green-600 text-white font-semibold rounded-lg shadow 
+         hover:bg-green-700 disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer">
+
+  <!-- Mostrar spinner si está procesando -->
+  <ng-container *ngIf="procesandoPedido; else normalBtn">
+    <svg class="animate-spin h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+      <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+      <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8v4a4 4 0 00-4 4H4z"></path>
+    </svg>
+    Procesando...
+  </ng-container>
+
+  <!-- Estado normal -->
+  <ng-template #normalBtn>
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+    </svg>
+    Confirmar
+  </ng-template>
+</button>
+
 
       <button (click)="mostrarVistaPrevia = false"
         class="w-full px-4 py-2 flex items-center justify-center gap-2 bg-red-600 text-white font-semibold rounded-lg shadow hover:bg-red-700">
